try to find out heroku ip

--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/PengChen11/Microservices-API_Gateway/issues"
   },
-  "homepage": "https://github.com/PengChen11/Microservices-API_Gateway#readme"
+  "homepage": "https://github.com/PengChen11/Microservices-API_Gateway#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
