--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/PengChen11/Microservices-API_Gateway#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
