--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@code-fellows/supergoose": "^1.0.11",
+    "jest": "^26.6.3"
   }
 }
